--- a/index.html
+++ b/index.html
@@ -1,2 +1,146 @@
-<html><head><link rel="stylesheet" href="resource://content-accessible/plaintext.css"></head><body><pre>TEST TEST TEST WORK IN PROGRESS TEST TEST TEST
+<html><head><link rel="stylesheet" href="resource://content-accessible/plaintext.css"></head><body><pre>{
+    "Content": {
+        "Contents":[
+            "Preface",
+            "Chapter 1 : My home"
+        ]
+        "Volume One : A Retrospect": {
+            "Preface": [
+                "On April 1st, 1924, I began to serve my sentence of detention in the Fortress of Landsberg am Lech, ",
+                "following the verdict pronounced by the Munich People’s Court on that day. ",
+                "After years of uninterrupted labour it was now possible for the first time to begin a work for which many had asked",
+                "I therefore decided to devote two volumes to a description not only of the aims of our Movement, but also of its development. ",
+                "There is more to be learned from this than from any purely doctrinaire treatise.",
+                "This has also given me the opportunity of describing my own development in so far ",
+                "as such a description is necessary to the understanding of the first as well as of the second volume and to refute the unfounded tales",
+                "which the Jeewwish press has circulated about me. ",
+                "In this work I turn not to strangers, but to those followers of the Movement",
+                "whose hearts belong to it and who wish to study it more profoundly. ",
+                "I know that fewer people are won over by the written, than by the spoken word",
+                "and that every great movement on this earth owes its growth to great speakers and not to great writers. ",
+                "Nevertheless, in order to achieve more equality and uniformity in the defence of any doctrine, ",
+                "its fundamental principles must be committed to writing.",
+                "May these two volumes therefore serve as building stones which I contribute to the common task. ",
+                "At half-past twelve on the afternoon of November 9th, 1923, those whose names are given below fell in front of the Feldherrnhalle ",
+                "and in the forecourt of the former War Ministry in Munich as loyal believers in the resurrection of their people: ",
+                "Alfa rth, Felix, Merchant, born July 5th, 1901",
+                "Baur iedl, Andreas, Hat ter, bo rn May 4th, 18 79 ",
+                "Casella, Theodor, Bank Official, born August 8th, 1900 ",
+                "Ehrlich, Wilhelm, Bank Official, born August 19th, 1894 ",
+                "Faust, Martin, Bank Official, born January 27th, 1901 ",
+                "Hechen ber ger, Anton, Mechanic, born September 28th, 1902 ",
+                "Koerner, Oskar, Merchant, born January 4th, 1875 ",
+                "Kuhn, Karl, Headwaiter, born July 26th, 1897 ",
+                "Laforce, Karl, Student of Engineering, born October 28th, 1904 ",
+                "Neu bauer, Kurt, Man-servant, born March 27th, 1899 ",
+                "Pape, Claus von, Merchant, born August 16th, 1904 ",
+                "Pfordten, Theodor von der, Councillor to the Supreme Provincial Court, born May 14th, 1873 ",
+                "Rick me rs, Johann, retired Cavalry Captain, born May 7th, 1881 ",
+                "Scheubner-Richter, Max Erwin von, Dr. of Engineering, born January 9th, 1884 ",
+                "Stransky, Lorenz, Ritter von, Engineer, born March 14th, 1899 ",
+                "Wolf, Wilhelm, Merchant, born October 19th, 1898 ",
+                "The so-called national authorities refused to allow the dead heroes a common grave. ",
+                "I therefore dedicate to them the first volume of this work, as a common memorial, ",
+                "in order that they, as martyrs to the cause, may be a permanent inspiration to the followers of our Movement. ",
+                " ",
+                "The Fortress, Landsberg am Lech, October 16th, 1924. "
+            ],
+            "Chapter 1 : My home": [
+                "To-day I consider it a good omen that Destiny appointed Braunau-on-the-Inn to be my birthplace, ",
+                "for that little town is situated just on the frontier between those two German States, ",
+                "the reunion of which seems, at least to us of the younger generation, a task to which we should devote our lives, ",
+                "and in the pursuit of which every possible means should be employed.",
+                "German-Austria must be restored to the great German Fatherland, and not on economic grounds. ",
+                "Even if the union were a matter of economic indifference, and even if it were to be disadvantageous from the economic standpoint, ",
+                "it still ought to take place. People of the same blood should be in the same Reich. ",
+                "The German people will have no right to engage in a colonial policy until they have brought all their children together in one State. ",
+                "When the territory of the Reich embraces all Germans and proves incapable of assuring them a livelihood, only then can the moral right arise, ",
+                "from the need of the people, to acquire foreign territory. The plough is then the sword, ",
+                "and the tears of war will produce the daily bread for the generations to come. ",
+                "For this reason the little frontier town appeared to me as the symbol of a great task, ",
+                "but in another respect it teaches us a lesson that is applicable to our day. ",
+                "Over a hundred years ago this sequestered spot was the scene of a tragic calamity which affected the whole German nation and will he remembered for ever, ",
+                "at least in the an nals of German history. ",
+                "At the time of our Fatherland’s deepest humiliation, a Nurnberg bookseller, ",
+                "Johannes Palm, an uncompromising nationalist and an enemy of the French, was put to death here because he had loved Germany even in her misfortune. ",
+                "He obstinately refused to disclose the names of his associates, or rather the principals who were chiefly responsible for the affair, just as Leo SchIageter did. ",
+                "The former, like the latter, was denounced to the French by a government official, ",
+                "a director of police from Augsburg who won ignoble renown on that occasion ",
+                "and set the example which was to be copied at a later date by the German officials of the Reich under Herr Severing’s regime. ",
+                "In this little town on the Inn, hallowed by the memory of a German martyr a town that was Bavarian by blood but under the rule of the Austrian State, ",
+                "a town that was Bavarian by blood but under the rule of the Austrian State, ",
+                "my parents were domiciled towards the end of the last century. My father was a civil servant who fulfilled his duties very conscientiously. ",
+                "My mother looked after the household and lovingly devoted herself to the care of her children of that period I have not retained many memories, ",
+                "because after a few years my father had to leave that frontier town which I had come to love so much ",
+                "and take up a new post farther down the Inn valley, at Passau, therefore, actually in Germany itself: ",
+                "In those days it was the usual lot of an Austrian civil servant to be transferred periodically from one post to another. ",
+                "Not long after coming to Passau my father was transferred to Linz, ",
+                "and while there he retired to live on his pension, but this did not mean that the old gentleman would now rest from his labours. ",
+                "He was the son of a poor cottager, and while still a boy he grew restless and left home. ",
+                "When he was barely thirteen years old he buckled on his satchel and set forth from his native country parish. ",
+                "Despite the dissuasion of villagers who could speak from ‘experience’, he went to Vienna to learn a trade there. ",
+                "This was in the fifties of last century. ",
+                "It was a sore trial, that of deciding to leave home and face the unknown, ",
+                "with three gulden in his pocket but when the boy of thirteen was a lad of seventeen and had passed his apprenticeship examination as a craftsman, ",
+                "he was not content. On the contrary, the persistent economic depression of that period ",
+                "and the constant want and misery strengthened his resolution to give up working at a trade and strive for ‘something higher.’",
+                "As a boy it had seemed to him that the position of the parish priest in his native village was the highest in the scale of human attainment, ",
+                "but now that the big city had enlarged his outlook, the young man looked up to the dignity of a state official as the highest of all. ",
+                "With the tenacity of one whom misery and trouble had already made old when only half-way through his youth, ",
+                "the young man of seventeen obstinately set out on his new project and stuck to it until he won through. ",
+                "He became a civil servant. He was about twenty-three years old, I think, when he succeeded in making himself what he had resolved to become. ",
+                "Thus he was able to keep, the vow he had made as a poor boy, ",
+                "not to return to his native village until he was ‘somebody.’ He had gained his end, ",
+                "but in the village there was nobody who remembered him as a little boy, and the village itself had become strange to him. ",
+                "Now at last, when he was fifty-six years old, he gave up his active career, but he could not bear to be idle for a single day. ",
+                "On the outskirts of the small market-town of Lambach in Upper Austria he bought a farm and tilled it himself. ",
+                "Thus, at the end of a long and hard-working career, he returned to the life which his father had led. ",
+                "It was at this period that I first began to have ideals of my own. ",
+                "I spent a good deal of time scampering about in the open, on the long road from school, ",
+                "and mixing with some of the roughest of the boys, which caused my mother many anxious moments. ",
+                "All this tended to make me something quite the reverse of a stay-at-home. ",
+                "I gave scarcely any serious thought to the question of choosing a vocation in life, ",
+                "but I was certainly quite out of sympathy with the kind of career which my father had followed. ",
+                "I think that an inborn talent for speaking now began to develop and take shape during the more or less strenuous arguments which I used to have with my comrades. ",
+                "I had become a juvenile ringleader who learned well and easily at school, but was rather difficult to manage. ",
+                "In my free time I practised singing in the choir of the monastery church at Lambach, ",
+                "and thus it happened that I was placed in a very favourable position to be emotionally impressed again and again",
+                "by the magnificent splendour of eccIesiastical ceremonial. ",
+                "What could be more natural for me than to look upon the abbot as representing the highest human ideal worth striving for, ",
+                "just as the position of the humble village priest had appeared so to my father in his own boyhood days? ",
+                "At least that was my idea for a while, but the childish disputes I had with my father did not lead him to appreciate his son’s oratorical gifts in such a way",
+                "as to see in them a favourable promise for such a career, and so he naturally could not understand the boyish ideas I had in my head at that time. ",
+                "This contradiction in my character made him feel somewhat anxious. ",
+                "As a matter of fact, that transitory yearning after such a vocation soon gave way to hopes that were better suited to my temperament. ",
+                "Browsing among my father’s books, I chanced to come across some publications that dealt with military subjects. ",
+                "One of these publications was a popular history of the Franco-German War of 1870-71. ",
+                "It consisted of two volumes of art illustrated periodical dating from those years. These became my favourite reading. ",
+                "In a little while that great and heroic conflict began to occupy my mind, ",
+                "and from that time onwards I became more and more enthusiastic about everything that was in any way connected with war or military affairs. ",
+                "The story of the Franco-German War had a special significance for me on other grounds also. ",
+                "For the first time, and as yet only in quite a vague way, the question began to present itself: ",
+                "Is there a difference—and if there be, what is it—between the Germans who fought that war, and the other Germans? ",
+                "Why did not Austria also take part in it? Why did not my father and all the others fight in that struggle?",
+                "Are we not the same as the other Germans? Do we not all belong together? ",
+                "That was the fiat time that this problem began to agitate my small brain, and from the replies that were given to the questions which I asked very tentatively, ",
+                "I was forced to accept the fact, though with a secret envy, that not all Germans had the good luck to belong to Bismarck’s Reich. ",
+                "This was something that I could not understand. ",
+                "It was decided that I should study. Considering my character as a whole, and especially my temperament, ",
+                "my father decided that the classical subjects studied at the Gymnasium were not suited to my natural talents, ",
+                "lie thought that the Realschule would suit me better. ",
+                "My obvious talent for drawing confirmed him in that view, for in his opinion, drawing was a subject too much neglected in the Austrian Gymnasium. ",
+                "Probably also the memory of the hard road which he himself had travelled contributed to make him look upon classical studies as unpractical",
+                "and accordingly to set little value on them. ",
+                "At the back of his mind he had the idea that his son should also become a government official. Indeed he had decided on that career for me. ",
+                "The difficulties with which he had had to contend in making his own career led him to overestimate what he had achieved, ",
+                "because this was exclusively the result of his own indefatigable industry and energy. ",
+                "The characteristic pride of the self-made man caused him to cherish the idea that his son should follow the same calling and if possible"
+                "rise to a higher position in it. ",
+                "Moreover, this idea was strengthened by the consideration that the results of his own life’s industry ",
+                "had placed him in a position to facilitate his son’s advancement in the same profession. ",
+                ""
+            ]
+        }
+    }
+}
 </pre></body></html>
