--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><head><link rel="stylesheet" href="resource://content-accessible/plaintext.css"></head><body><pre>{
+<html><body><pre>{
     "Content": {
         "Contents":[
             "Preface",
